# bevis

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
bevis/: Cargo.toml
bevis/src/: challenge.rs  lib.rs  transcript.rs
bevis/tests/: challenge.rs
bevis_derive/: Cargo.toml
bevis_derive/src/: absorb.rs  challenge.rs  lib.rs  transcript.rs
example/: Cargo.toml
example/src/: main.rs
fsffs/: Cargo.toml
fsffs/src/: challenge.rs  lib.rs  transcript.rs
fsffs_derive/: Cargo.toml
fsffs_derive/src/: absorb.rs  challenge.rs  lib.rs  transcript.rs
src/: challenge.rs  lib.rs  msg.rs  rng.rs  trace.rs  transcript.rs
src/absorb/: mod.rs  more.rs  serialize.rs
src/safe/: arthur.rs  mod.rs  msg.rs  proof.rs
tests/: challenge.rs
