[package]
name = "bevis"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Hall-Andersen"]

[dependencies]
bevis_derive = { path = "bevis_derive" }
serde = {version = "1", default-features = false }
rand_core = "^0.6"

[features]
safe = []  # safe-proof interface
trace = [] # tracing transcript for debugging/testing 

[dev-dependencies]
compiletest_rs = "0.9"