[package]
name = "bevis"
version = "0.1.0"
edition = "2021"
authors = ["Mathias Hall-Andersen"]
repository = "https://github.com/rot256/bevis"
description = "Fiat-Shamir without the Hassle"
license = "MIT"

[dependencies]
rand_core = "^0.6"
serde = {version = "1", default-features = false }

[features]
safe = []  # safe-proof interface
trace = [] # tracing transcript for debugging/testing

[dev-dependencies]
compiletest_rs = "0.9"
