[package]
name = "bevis"
version = "0.1.1"
edition = "2021"
authors = ["Mathias Hall-Andersen"]
repository = "https://github.com/rot256/bevis"
description = "Fiat-Shamir without the Hassle"
license = "MIT"

[dependencies]
serde = {version = "1", default-features = false }
rand_core = "^0.6"
bevis-derive = { version = "0.1", optional = true }

[features]
safe = []  # safe-proof interface
trace = [] # tracing transcript for debugging/testing
derive = ["bevis-derive"]
